# nova

./: Cargo.toml  README.md  compress.sh  extract.sh  out.exolvl  run.sh  test.exolvl  test.sh
.github/workflows/: deploy.yml  mdbook-deploy.yml  mdbook.yml  rust-clippy.yml
book/: book.toml
book/src/: SUMMARY.md  actions.md  expressions.md  for_loops.md  hello_world.md  if_else.md  infinite_loop.md  introduction.md  language_tutorial.md  loops.md  variables.md
examples/: factorial.nv  factorial.sw  fib.nv  fib.sw  hello.sw  helloworld.nv  if_test.nv  minimal.nv  ptr_test.nv  test.nv  test.sw
examples/diagnostics/: advanced_if_statement.nv  funcSnakeCase.nv  if_statement_always_true_false.nv  run_all.sh  simple_unreachable_code.nv  unreachable_code.nv  useless_loop.nv  var_snake_case.nv  wrong_return_type.nv
scripts/: compress.sh  extract.sh
src/: analyse.rs  analysis.rs  ast.rs  codegen.rs  const_eval.rs  default.exolvl  error.rs  interpret.rs  lexer.rs  lib.rs  low_ir.rs  main.rs  mir.rs  mir_no_span.rs  optimiser.rs  parser.rs  scopes.rs  span.rs  typecheck.rs
src/grammars/: lezer.grammar
src/snapshots/: nova__lexer__tests__bools.snap  nova__lexer__tests__colours.snap  nova__lexer__tests__comments.snap  nova__lexer__tests__control.snap  nova__lexer__tests__floats.snap  nova__lexer__tests__integers.snap  nova__lexer__tests__keywords.snap  nova__lexer__tests__mixed.snap  nova__lexer__tests__operators.snap  nova__lexer__tests__strings.snap
vscode-extension/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
(+2 files in other folders)
