[package]
name = "nova"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.6"
chumsky = "1.0.0-alpha.7"
clap = { version = "4.5.4", features = ["derive"] }
codespan-reporting = "0.11.1"
cranelift = "0.107.2"
cranelift-module = "0.107.2"
cranelift-native = "0.107.2"
cranelift-object = "0.107.2"
heck = "0.5.0"
levenshtein = "1.0.5"
log = "0.4.21"
rustc-hash = "1.1.0"
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
    "stderr",
] }
snake_case = "0.3.1"
